--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ coverage
 node_modules
 build/
 .env*
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
