--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.17.1",
-    "lodash.pick": "^4.4.0"
+    "lodash.pick": "^4.4.0",
+    "serverless-http": "^2.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "serverless-domain-manager": "^5.1.0"
+  },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
