--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@types/express": "^4.17.11",
+    "@types/lodash.pick": "^4.4.6",
     "express": "^4.17.1",
-    "lodash.pick": "^4.4.0",
-    "serverless-http": "^2.7.0"
+    "lodash.pick": "^4.4.0"
   },
   "devDependencies": {
-    "serverless-domain-manager": "^5.1.0"
+    "@types/node": "^14.14.31",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.2"
   },
   "scripts": {
+    "build": "tsc",
+    "dev": "ts-node src/index.ts",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
