--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "src",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "12.20.1"
+  },
   "main": "app.js",
   "dependencies": {
     "@types/express": "^4.17.11",
@@ -17,7 +20,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/index.ts",
-    "start": "node index.js",
+    "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
