--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": ">=12.20.1"
+    "node": "12.20.1"
   },
   "main": "app.js",
   "dependencies": {
