--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": "12.20.1"
+    "node": ">=12.20.1"
   },
   "main": "app.js",
   "dependencies": {
-    "@types/express": "^4.17.11",
-    "@types/lodash.pick": "^4.4.6",
     "express": "^4.17.1",
     "lodash.pick": "^4.4.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/lodash.pick": "^4.4.6",
     "@types/node": "^14.14.31",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
